--- a/A3_report.html
+++ b/A3_report.html
@@ -257,9 +257,9 @@
 				showcasing differences by shading (does with opacity in the final sketch) from design 2, and showcasing
 				impact and consequences via circle mark and size from design 3. Something I was not able to incorporate
 				was communicating the notion of variation in the data as it would add to the visual clutter and the
-				circle marks do not have come with strong conventions for showcasing variation or uncertainty. Overall,
+				circle marks do not come with strong conventions for showcasing variation or uncertainty. Overall,
 				this process made me realize that not all marks and channels come with the same baggage. While I was
-				able to encode size within the circle mark and make my visualization “easy” to read due to convention,
+				able to encode size within the circle mark and make my visualization “easy” to read due to cultural conventions,
 				it would not have been true if I chose another shape like line.
 
 			</p>
